test/Fail/Erased-record-1.agda
record @0 R : Set₂ where
  constructor c
  field
    x : Set₁

_ : R
_ = c Set
